--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "baseUrl": "."
+  },
+  "paths": {
+    "@/*": ["./*"],
+    "@/components/*": ["/components/*"],
+    "@/prisma/biscuits/*": ["/app/prisma/biscuits/*"],
+    "@/prisma/evedump/*": ["/app/prisma/evedump/*"]
   }
 }
