--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "dbupdate": "cd ./prisma && prisma db push --schema=./biscuits.prisma && prisma generate --schema=./biscuits.prisma && prisma db push --schema=./evedump.prisma && prisma generate --schema=./evedump.prisma"
+    "dbupdate": "prisma db push --schema=/app/prisma/biscuits/schema.prisma --skip-generate && prisma db push --schema=/app/prisma/evedump/schema.prisma --skip-generate"
   },
   "dependencies": {
     "@auth/sequelize-adapter": "^1.0.1",
@@ -30,6 +30,7 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.1.1",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "prisma": "^5.1.1",
