Reworked the register route, accounts can be registered now, fixed prisma schemas, updated dbupdate script, added biscuits-toasts to keep toasts consistent, corrected schema loading in nextauth, fixed ts pathing for shorthand imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
     "strictNullChecks": true,
     "paths": {
       "@components/*": ["app/components/*"],
-      "@prisma/biscuits/*": ["app/prisma/biscuits/*"],
-      "@prisma/evedump/*": ["app/prisma/evedump/*"],
+      "@prisma/biscuits/*": ["prisma/biscuits/*"],
+      "@prisma/evedump/*": ["prisma/evedump/*"],
       "@mailing/*": ["app/mail/*"]
     }
   },
