--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "dbupdate": "prisma db push --schema=/app/prisma/biscuits/schema.prisma --skip-generate && prisma db push --schema=/app/prisma/evedump/schema.prisma --skip-generate"
+    "dbupdate": "prisma db push --schema=./prisma/biscuits/schema.prisma --skip-generate && prisma generate --generator=biscuits --schema=./prisma/biscuits/schema.prisma && prisma db push --schema=./prisma/evedump/schema.prisma --skip-generate && prisma generate --generator=evedump --schema=./prisma/evedump/schema.prisma"
   },
   "dependencies": {
     "@auth/sequelize-adapter": "^1.0.1",
-    "@prisma/client": "^5.1.0",
+    "@prisma/client": "^5.1.1",
+    "@types/bcrypt": "^5.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "fs": "^0.0.1-security",
     "mariadb": "^3.2.0",
@@ -33,7 +35,6 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.1.1",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
-    "prisma": "^5.1.1",
     "typescript": "5.1.6"
   }
 }
