--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#prisma
+/prisma/biscuits/runtime
+/prisma/biscuits/index-browser.js
+/prisma/biscuits/index.d.ts
+/prisma/biscuits/index.js
+/prisma/biscuits/package.json
+/prisma/biscuits/query_engine-windows.dll.node
+/prisma/evedump/runtime
+/prisma/evedump/index-browser.js
+/prisma/evedump/index.d.ts
+/prisma/evedump/index.js
+/prisma/evedump/package.json
+/prisma/evedump/query_engine-windows.dll.node
