--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "dbupdate": "prisma db push --schema=./prisma/biscuits/schema.prisma --skip-generate && prisma generate --generator=biscuits --schema=./prisma/biscuits/schema.prisma && prisma db push --schema=./prisma/evedump/schema.prisma --skip-generate && prisma generate --generator=evedump --schema=./prisma/evedump/schema.prisma"
   },
   "dependencies": {
-    "@auth/sequelize-adapter": "^1.0.1",
     "@prisma/client": "^5.1.1",
     "@types/bcrypt": "^5.0.0",
-    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "fs": "^0.0.1-security",
-    "mariadb": "^3.2.0",
     "mysql2": "^3.5.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
@@ -28,13 +25,15 @@
     "react-dom": "18.2.0",
     "react-password-checklist": "^1.4.3",
     "react-toastify": "^9.1.3",
-    "sequelize": "^6.32.1",
     "swr": "^2.2.0"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.1.1",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
