--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@prisma/client": "^5.1.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.268.0",
     "mysql2": "^3.5.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
@@ -25,7 +28,9 @@
     "react-dom": "18.2.0",
     "react-password-checklist": "^1.4.3",
     "react-toastify": "^9.1.3",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.1.1",
