--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "18.2.18",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
+    "prisma": "^5.1.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
