--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@types/bcrypt": "^5.0.0",
+    "animate.css": "^4.1.1",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "fs": "^0.0.1-security",
-    "lucide-react": "^0.268.0",
-    "mysql2": "^3.5.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-eveonline": "^0.1.1",
-    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-password-checklist": "^1.4.3",
+    "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
+    "tailwind-animatecss": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6"
   },
@@ -37,7 +38,7 @@
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.29",
     "prisma": "^5.1.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
